[package]
name = "warp-websockets-example"
version = "0.1.1"
authors = ["Mario Zupan <mario@zupzup.org>"]
edition = "2018"

[dependencies]
tokio = { version= "1", features = ["full"] }
tokio-stream = "0.1.6"
warp = "0.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
futures = { version = "0.3", default-features=false}
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"]}